_assets/styles/_custom.scss
@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700|Roboto:300,400');

html, body {
  overflow-x: hidden;
}

.navbar-nav .nav-link.btn.btn-primary {
  padding-left: 2rem;
  padding-right: 2rem;
}

nav.navbar {
  border-bottom: 1px solid map-get($theme-colors, "grey-light");
}

.navbar-brand img, img.brand-logo {
  max-height: 3rem;
  /*max-width: 5rem;*/
}

footer img.brand-logo {
  @include media-breakpoint-down(sm) {
    max-height: 5rem;
  }
}

nav.navbar {
  border-radius: 0 !important;
}

img.max-image {
  max-height: 200px;
}

img.medium-image {
  max-width: 90%;
  display: block;
  margin: auto;

  @include media-breakpoint-down(sm) {
    max-width: 60%;
  }
}

img.large-image {
  max-width: 70%;
  @include media-breakpoint-down(sm) {
    max-width: 75%;
  }
}

img.small-image {
  max-height: 100px;
}

img.visual {
  max-width: 50%;

  @include media-breakpoint-down(sm) {
    max-width: 80%;
  }
}

.subtitle {
  font-family: 'Roboto', sans-serif !important;
  font-weight: 300 !important;
  color: #878f9a;
}

.typed-cursor {
    opacity: 1;
    animation: typedjsBlink 0.7s infinite;
    animation: typedjsBlink 0.7s infinite;
    animation-name: typedjsBlink;
    animation-duration: 0.7s;
    animation-timing-function: initial;
    animation-delay: initial;
    animation-iteration-count: infinite;
    animation-direction: initial;
    animation-fill-mode: initial;
    animation-play-state: initial;
}

 @keyframes typedjsBlink{
    50% { opacity: 0.0; }
}

@-webkit-keyframes typedjsBlink{
    0% { opacity: 1; }
    50% { opacity: 0.0; }
    100% { opacity: 1; }
}

.index-row {
  font-size: 1.4rem;
}

.font-size-lower {
  font-size: 1.1rem;
}

.slick-slider.slick-dotted {
  margin: 0;

  .slick-dots {
    position: static;
    bottom: 0;
    display: flex;
    width: auto;
    list-style: none;
    justify-content: center;
    align-items: center;
    padding-bottom: 1rem;

    li button:before {
      font-size: 1rem;
      color: #fff;
    }

    li.slick-active button:before {
      font-size: 1.3rem;
      color: map-get($theme-colors, "secondary");
    }
  }
}

a.pointable {
  cursor: pointer;
}

.small-font {
  font-size: 0.8rem !important;
}

.download {
  width: 13rem;
  border: 2px solid map-get($theme-colors, "primary");
  border-radius: 10px;
  padding: .5rem 1rem;
  line-height: 1.2rem;

  &:hover, &:active {
    border-color: map-get($theme-colors, "dark");
  }
}

.btn-primary:hover {
  background-color: map-get($theme-colors, 'dark');
  border-color: map-get($theme-colors, 'dark');
}

a.btn-primary.text-white:hover {
  color: map-get($theme-colors, 'white') !important;
}

footer {
  font-size: 0.8rem;

  @include media-breakpoint-down(sm) {
    font-size: $font-size-base;
  }
}

.pull-up {
  position: relative;
  margin-top: -4rem;

  @include media-breakpoint-down(sm) {
    margin-top: -2rem;
  }
}

.pull-up-small {
  position: relative;
  margin-top: -3rem;

  @include media-breakpoint-down(sm) {
    margin-top: -1rem;
  }
}

#social-row {
  font-size: $font-size-base;

  @include media-breakpoint-down(sm) {
    font-size: $font-size-base + 0.5rem;
  }
}

.flag-icon {
  vertical-align: text-top;
}

.dropdown-toggle::after {
  color: map-get($theme-colors, "secondary");
}

.mw-75 {
  max-width: 75%;
}

.mw-50 {
  max-width: 50%;
}

.mw-25 {
  max-width: 25%;
}

.mw-10 {
  max-width: 10rem;
}

.font-serif {
  font-family: $font-family-sans-serif;
}

.mh-350 {
  max-height: 250px;
}

.container-text {
  max-width: 45rem;
}

